# gcloud_demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 797785b2b822_create_initial_table.py
src/gcloud_demo/: config.py  thirdparty.py  thirdparty_populator.py
src/gcloud_demo/fastapi_appengine/: app.yaml  main.py
src/gcloud_demo/fastapi_cloudrun/: Dockerfile  requirements.txt
src/gcloud_demo/fastapisql_appengine/: main.py  requirements.txt
src/gcloud_demo/fastapisql_async/: main.py
src/gcloud_demo/fastapisql_cloudrun/: Dockerfile  config.py  main.py  sql.py
src/gcloud_demo/fastapisql_helloworld_cloudrun/: Dockerfile  requirements.txt  sql.py
src/gcloud_demo/helloworld_appengine/: app.yaml  main.py  requirements.txt
src/gcloud_demo/helloworld_cloudrun_container/: .gcloudignore  Dockerfile  requirements.txt
src/gcloud_demo/helloworld_cloudrun_source/: main.py
src/gcloud_demo/models/: api_models.py  models.py  sql_models.py
