[tool.poetry]
name = "gcloud-demo"
version = "0.1.0"
description = "Demo for Google App Engine and Google Cloud Run tools, using FastAPI+SQL+Redis"
authors = ["emunsing <eric.munsing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
sqlmodel = "*"
redis = "*"
mypy = "*"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

