[tool.poetry]
name = "gcloud-demo"
version = "0.1.0"
description = "Demo for Google App Engine and Google Cloud Run tools, using FastAPI+SQL+Redis"
authors = ["emunsing <eric.munsing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"
fastapi = "*"
gunicorn = "*"
sqlmodel = "*"
redis = "*"
mypy = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
python-dotenv = "*"
pydantic-settings = "*"
google-cloud-storage = "*"
uvicorn = {extras = ["standard"], version = "*"}

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

